--- a/css/cssOmoldsCloud.css
+++ b/css/cssOmoldsCloud.css
@@ -19,6 +19,45 @@
 }
 
 
+/**
+ * Fuente logo Omolds
+ */
+
+ @font-face {
+  font-family: 'IconOmolds';
+  src: url('fonts/IconOmolds.eot?41341975');
+  src: url('fonts/IconOmolds.eot?41341975#iefix') format('embedded-opentype'),
+       url('fonts/IconOmolds.woff?41341975') format('woff'),
+       url('fonts/IconOmolds.ttf?41341975') format('truetype'),
+       url('fonts/IconOmolds.svg?41341975#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.logo-omolds
+    {
+      font-family: "IconOmolds";
+      font-style: normal;
+      font-weight: normal;
+      speak: none;
+      display: inline-block;
+      text-decoration: inherit;
+      width: 1em;
+      margin-right: .2em;
+      text-align: center;
+      font-variant: normal;
+      text-transform: none;
+      line-height: 1em;
+      margin-left: .2em;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      color:#ff0060;
+      font-size: 10px;
+    }
+
+.logo-omolds:before { content: ''; }
+
+
 /* @group EstilosBootstrap */
 
 html {
@@ -47,7 +86,7 @@ body {
   margin:0;
   font-family:'Barlow Semi Condensed', sans-serif;
   color: #fefb00;
-  background-color: #fe3260;
+  background-color: #FF0060;
 }
 
 [tabindex="-1"]:focus {
@@ -9636,7 +9675,7 @@ p, span, div, row, column, a, header, input, button, select, optgroup, textarea 
 
 
 .btn.btn-primary.btn-circle.btnCircular {
-  z-index:99;
+  z-index:30;
   position: absolute;
   bottom:0;
   top: -58px;
@@ -9851,6 +9890,9 @@ a:hover {
   margin:2px;
 }
 
+
+
+
 hr {
   margin-top:10px;
   margin-bottom:10px;
@@ -9901,7 +9943,7 @@ hr {
 .modalInferior {
   /*background-color:#223D8D;*/
   color:#fff;
-  z-index:60;
+  z-index:90;
   position:absolute;  /*se debe poner primero el position antes que el bottom para alinear hacia abajo*/
   bottom: 0;
   width:100%;
@@ -9988,6 +10030,49 @@ hr {
 
 
 /*FIN*/
+
+/*TAMAÑO DEL BOTON*/
+
+.cajonBotonCuadrado {
+	height: 120px;
+	width: 120px;
+	margin:14px;
+	color: #ff0060;
+	background-color: #F2F2F2;
+	
+}
+
+/*UBICACION Y TAMAÑO DEL ICONO*/
+
+.cajonBotonCuadrado .icon   {
+	height:40px;
+	margin-top: 15px;
+	margin-bottom: -30px;
+
+}
+
+
+.cajonBotonCuadrado .icon a   {
+	font-size: 27px;
+	height:22px;
+	color: #FF0060;
+
+}
+
+.cajonBotonCuadrado .title  {
+	height:30px;
+	color: #FF0060;
+	
+	
+}
+
+/*COLORES DE LOS BOTONES GRANDES*/
+.cajonBotonCuadrado .title a {
+	font-size: 14px;
+	color: #ff0060;
+	line-height: normal;
+	cursor: pointer;
+}
 
 
 
