--- a/css/cssOmoldsCloud.css
+++ b/css/cssOmoldsCloud.css
@@ -2642,10 +2642,23 @@ tbody.collapse.show {
   outline:0;
 }
 
+.open>.dropdown-menu {
+  display:block;
+}
+
 .dropdown-menu.show {
   display:block;
 }
 
+.dropdown-menu>li>a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+}
 .dropdown-header {
   display:block;
   padding:0.5rem 1.5rem;
