--- a/css/cssOmoldsCloud.css
+++ b/css/cssOmoldsCloud.css
@@ -10105,6 +10105,125 @@ hr {
 
 }
 
+[role=button], a, area, button, input:not([type=range]), label, select, summary, textarea {
+	
+}
+
+
+/*BOTONES switch S/N*/
+.switch {
+  position: relative;
+  height: 26px;
+  width: 120px;
+  background: rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+}
+
+.switch-label {
+  position: relative;
+  z-index: 2;
+  float: left;
+  width: 58px;
+  line-height: 26px;
+  font-size: 11px;
+  color: rgba(255, 255, 255, 0.35);
+  text-align: center;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
+  cursor: pointer;
+}
+.switch-label:active {
+  font-weight: bold;
+}
+
+.switch-label-off {
+  padding-left: 2px;
+}
+
+.switch-label-on {
+  padding-right: 2px;
+}
+
+
+.switch-input {
+  display: none;
+}
+.switch-input:checked + .switch-label {
+  font-weight: bold;
+  color: rgba(255, 255, 255, 0.65);
+  text-shadow: 0 1px rgba(255, 255, 255, 0.25);
+  -webkit-transition: 0.15s ease-out;
+  -moz-transition: 0.15s ease-out;
+  -ms-transition: 0.15s ease-out;
+  -o-transition: 0.15s ease-out;
+  transition: 0.15s ease-out;
+  -webkit-transition-property: color, text-shadow;
+  -moz-transition-property: color, text-shadow;
+  -ms-transition-property: color, text-shadow;
+  -o-transition-property: color, text-shadow;
+  transition-property: color, text-shadow;
+}
+.switch-input:checked + .switch-label-on ~ .switch-selection {
+  left: 60px;
+  /* Note: left: 50%; doesn't transition in WebKit */
+}
+
+.switch-selection {
+  position: absolute;
+  z-index: 1;
+  top: 2px;
+  left: 2px;
+  display: block;
+  width: 58px;
+  height: 22px;
+  border-radius: 3px;
+  background-color: #ff0060;
+  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
+  -webkit-transition: left 0.15s ease-out;
+  -moz-transition: left 0.15s ease-out;
+  -ms-transition: left 0.15s ease-out;
+  -o-transition: left 0.15s ease-out;
+  transition: left 0.15s ease-out;
+}
+
+#resultTypeField {
+    height: auto;
+    padding: 10px;
+    margin: 10px 0;
+    background-color: rgba(0,0,0,0.1);
+}
+
+#resultTypeField .short_answer {
+    background: transparent;
+    border: none;
+    padding: .125em 0;
+    color: rgba(0,0,0,0.38);
+    border-bottom: 1px dotted rgba(0,0,0,0.38);
+    width: 30%;
+}
+
+#resultTypeField .paragraph {
+    background: transparent;
+    border: none;
+    padding: .125em 0;
+    color: rgba(0,0,0,0.38);
+    border-bottom: 1px dotted rgba(0,0,0,0.38);
+    width: 90%;
+}
+#resultTypeField  .moreOption{
+    position: relative;
+    left: 94%;
+    top: 0;
+    width: 30px;
+    height: 30px;
+    padding: 7px;
+}
+
+#resultTypeField .form-check-label{
+  width: 100%
+}
 
 
 
