--- a/css/cssOmoldsCloud.css
+++ b/css/cssOmoldsCloud.css
@@ -3849,7 +3849,7 @@ tbody.collapse.show {
   margin-bottom:1rem;
   list-style:none;
   background-color:#e9ecef;
-  border-radius:0.25rem;
+  /*border-radius:0.25rem*/;
 }
 
 .breadcrumb::after {
