--- a/css/cssOmoldsCloud.css
+++ b/css/cssOmoldsCloud.css
@@ -3853,12 +3853,13 @@ tbody.collapse.show {
 
 .breadcrumbOmolds {
   padding:10px 10px;
+  margin-top: 5px;
   margin-bottom: 5px;
   /*padding:0.75rem 1rem;*/
   /*margin-bottom:1rem;*/
   list-style:none;
-  background-color: #ff22e5;
-  border-radius:0;
+  background-color: #ff0060;
+  /*border-radius:0;*/
 }
 
 .breadcrumbOmolds::after {
@@ -3875,7 +3876,7 @@ tbody.collapse.show {
   display:inline-block;
   padding-right:0.5rem;
   padding-left:0.5rem;
-  color:#868e96;
+  color: #0f0;
   content:"/";
 }
 
