vichom casa ian
estilos video

--- a/css/cssOmoldsCloud.css
+++ b/css/cssOmoldsCloud.css
@@ -10481,7 +10481,7 @@ hr {
 	
 	width: 30%;
 	max-width: 560px;
-	background-color: orange;
+	background-image:https://omolds.github.io/assets/blob/master/images/vichom/videoNoCargado.jpg?raw=true;
 
 }
 
