--- a/css/cssOmoldsCloud.css
+++ b/css/cssOmoldsCloud.css
@@ -4808,12 +4808,14 @@ button.close {
 }
 
 .tooltip-inner {
-  max-width:200px;
+  max-width:300px;
   padding:3px 8px;
   color:#fff;
   text-align:center;
-  background-color:#000;
+  background-color:#ff0060;
   border-radius:0.25rem;
+  
+  
 }
 
 .popover {
@@ -10476,6 +10478,12 @@ hr {
 
 }
 
+.videoUsuarioVichom {
+	
+	width: 100%;
+	max-width: 560px;
+
+}
 
 
 
