github en drive omolds
carpetas

--- a/css/cssOmoldsCloud.css
+++ b/css/cssOmoldsCloud.css
@@ -48,6 +48,78 @@
 .logo-omolds:before { content: 'î €'; }
 
 
+/* @group SITOM */
+
+@ -4808,12 +4808,14 @@ button.close {
+}
+
+.tooltip-inner {
+  max-width:200px;
+  max-width:300px;
+  padding:3px 8px;
+  color:#fff;
+  text-align:center;
+  background-color:#000;
+  background-color:#ff0060;
+  border-radius:0.25rem;
+  
+  
+}
+
+.popover {
+@ -10476,6 +10478,12 @@ hr {
+
+}
+
+/* @end */
+
+
+
+/* @group VICHOM VIDEOS */
+
+
+.cleanRowMargin {
+  
+  width: 100%;
+  margin: 0;
+
+}
+
+
+.iframeVideosVichom{
+  
+  position: absolute; 
+  height: 100%; 
+
+}
+ç
+
+.videoUsuarioVichom {
+  
+  width: 110px;
+  max-width: 560px;
+  border: 2px solid white;
+  background: #808080 url(https://raw.githubusercontent.com/omolds/assets/master/images/vichom/videoNoCargado.png) no-repeat center center;
+  position: relative;
+  z-index: 10;
+  margin-top: 5px;
+  margin-left: 5px;
+}
+
+.videoAgenteVichom {
+  
+  width: 100%;
+  /*max-width: 560px;*/
+  background: #808080 url(https://raw.githubusercontent.com/omolds/assets/master/images/vichom/videoNoCargado.png) no-repeat center center;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 5;
+}
+
+/* @end */
+
+
 /* @group EstilosBootstrap */
 
 html {
@@ -10470,76 +10542,6 @@ hr {
 
 /* @end */
 
-/* @group SITOM */
-
-@ -4808,12 +4808,14 @@ button.close {
-}
-
-.tooltip-inner {
-  max-width:200px;
-  max-width:300px;
-  padding:3px 8px;
-  color:#fff;
-  text-align:center;
-  background-color:#000;
-  background-color:#ff0060;
-  border-radius:0.25rem;
-  
-  
-}
-
-.popover {
-@ -10476,6 +10478,12 @@ hr {
-
-}
-
-/* @end */
-
-
-
-/* @group VICHOM VIDEOS */
-
-
-.cleanRowMargin {
-	
-	width: 100%;
-	margin: 0;
-
-}
-
-
-.iframeVideosVichom{
-	
-	position: absolute; 
-	height: 100%; 
-
-}
-
-
-.videoUsuarioVichom {
-	
-	width: 110px;
-	max-width: 560px;
-	border: 2px solid white;
-	background: #808080 url(https://raw.githubusercontent.com/omolds/assets/master/images/vichom/videoNoCargado.png) no-repeat center center;
-	position: relative;
-	z-index: 10;
-	margin-top: 5px;
-	margin-left: 5px;
-}
-
-.videoAgenteVichom {
-	
-	width: 100%;
-	/*max-width: 560px;*/
-	background: #808080 url(https://raw.githubusercontent.com/omolds/assets/master/images/vichom/videoNoCargado.png) no-repeat center center;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	z-index: 5;
-}
-
-/* @end */
 
 
 
